# whatismyip2

./: pyproject.toml
whatismyip2/: __init__.py  index.html  whatismyip2.py
